# claude-sessions

./: README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  JSONL_FORMAT.md
docs/development/: CLAUDE.md  CONTRIBUTING.md  INVARIANTS.md  REQUIREMENTS.md
docs/technical/: SEO_OPTIMIZATION_SUMMARY.md  index.md
docs/user/: CHANGELOG.md  INSTALL.md
scripts/: run_tests.py
src/: __init__.py  backup.py  claude_sessions.py  extract_claude_logs.py  formatters.py  html_generator.py  interactive_ui.py  parser.py  prompts.py  realtime_search.py  search_conversations.py  stats.py  utils.py
tests/: conftest.py  test_search_conversations_aligned.py  test_search_integration.py
